name:          hopfield
version:       0.1.0.0
license:       AllRightsReserved
author:        Lukasz Severyn, Mihaela Rosca, Niklas Hambuechen, Razvan Marinescu, Wael Al Jisihi
copyright:     Copyright: (c) 2012 Lukasz Severyn, Mihaela Rosca, Niklas Hambuechen, Razvan Marinescu, Wael Al Jisihi
maintainer:    Niklas Hambüchen <mail@nh2.me>
stability:     experimental

build-type:    Simple
cabal-version: >= 1.10


library
  default-language: Haskell2010
  exposed-modules:
      Hopfield.Hopfield
    , Hopfield.Analysis
    , Hopfield.Measurement
    , Hopfield.ClassificationBoltzmannMachine
    , Hopfield.Clusters
    , Hopfield.Common
    , Hopfield.ConvertImage
    , Hopfield.RestrictedBoltzmannMachine
    , Hopfield.SuperAttractors
    , Hopfield.Util
    , Hopfield.Experiment
    , Hopfield.TestUtil
    , Hopfield.ExpUtil
  other-modules:
  hs-source-dirs:
    src
  build-tools: hsc2hs
  build-depends:
      base >= 4 && <= 5
    , parallel >= 3.1.0.1
    , array >= 0.4.0.0
    , erf >= 2.0.0.0
    , exact-combinatorics >= 0.2.0.4
    , hmatrix >= 0.11.0.4
    , MonadRandom >= 0.1.8
    , probability >= 0.2.4
    , random >= 1.0.1.1
    , random-fu >= 0.2.3.1
    , rvar >= 0.2.0.1
    , vector >= 0.9.1
    , QuickCheck >= 2.4.2
    , deepseq >= 1.3.0.0
  c-sources:
      src/Hopfield/convertImage.c
  include-dirs:
      src/Hopfield
    , /usr/include/ImageMagick
  includes:
      wand/magick_wand.h
  cc-options:
    -- Can't use "-Wextra -Werror" here due to hsc2hs generating unused main() parameters
    -g -std=c99 -O0 -Wall -Wextra
  ghc-options:
    -Wall -fwarn-unused-imports -auto-all -rtsopts
  extra-libraries:
    MagickWand MagickCore


executable experiments
  default-language: Haskell2010
  hs-source-dirs:
    apps
  main-is:
    ExperimentMain.hs
  other-modules:
  build-depends:
      base >= 4 && <= 5
    , hopfield
  ghc-options:
    -Wall -fwarn-unused-imports -auto-all -rtsopts


executable experiment-super2
  default-language: Haskell2010
  hs-source-dirs:
    apps
  main-is:
    ExperimentSuper2.hs
  other-modules:
  build-depends:
      base >= 4 && <= 5
    , hopfield
    , parallel >= 3.1.0.1
    , random >= 1.0.1.1
    , probability >= 0.2.4
    , hmatrix >= 0.11.0.4
    , MonadRandom >= 0.1.8
    , vector >= 0.9.1
    , random-fu >= 0.2.3.1
    , array >= 0.4.0.0
    , erf >= 2.0.0.0
    , exact-combinatorics >= 0.2.0.4
    , rvar >= 0.2.0.1
    , hspec >= 1.3.0.1
    , HUnit >= 1.2.4.2
    , QuickCheck >= 2.4.2
  ghc-options:
    -Wall -fwarn-unused-imports


executable smallexp
  default-language: Haskell2010
  hs-source-dirs:
    apps
  main-is:
    SmallExperiments.hs
  other-modules:
  build-depends:
      base >= 4 && <= 5
    , hopfield
    , parallel >= 3.1.0.1
    , random >= 1.0.1.1
    , probability >= 0.2.4
    , hmatrix >= 0.11.0.4
    , MonadRandom >= 0.1.8
    , vector >= 0.9.1
    , random-fu >= 0.2.3.1
    , array >= 0.4.0.0
    , erf >= 2.0.0.0
    , exact-combinatorics >= 0.2.0.4
    , rvar >= 0.2.0.1
    , hspec >= 1.3.0.1
    , HUnit >= 1.2.4.2
    , QuickCheck >= 2.4.2
  ghc-options:
    -Wall -fwarn-unused-imports -auto-all -rtsopts


executable clusterexp
  default-language: Haskell2010
  hs-source-dirs:
    apps
  main-is:
    ClusterExperiments.hs
  other-modules:
  build-depends:
      base >= 4 && <= 5
    , hopfield
    , parallel >= 3.1.0.1
    , random >= 1.0.1.1
    , probability >= 0.2.4
    , hmatrix >= 0.11.0.4
    , MonadRandom >= 0.1.8
    , vector >= 0.9.1
    , random-fu >= 0.2.3.1
    , array >= 0.4.0.0
    , erf >= 2.0.0.0
    , exact-combinatorics >= 0.2.0.4
    , rvar >= 0.2.0.1
    , hspec >= 1.3.0.1
    , HUnit >= 1.2.4.2
    , QuickCheck >= 2.4.2
  ghc-options:
    -Wall -fwarn-unused-imports -threaded



executable recognize
  default-language: Haskell2010
  hs-source-dirs:
    apps
  main-is:
    Recognize.hs
  other-modules:
  build-depends:
      base >= 4 && <= 5
    , hopfield
    , random >= 1.0.1.1
    , MonadRandom >= 0.1.8
    , vector >= 0.9.1
    , optparse-applicative >= 0.5.0.0
    , parallel >= 3.1.0.1
  ghc-options:

    -Wall -fwarn-unused-imports -auto-all -rtsopts


Test-Suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Main.hs
  build-depends:
      base >= 4
    , hopfield
    , erf >= 2.0.0.0
    , hspec >= 1.3.0.1
    , HUnit >= 1.2.4.2
    , QuickCheck >= 2.4.2
    , vector >= 0.9.1
    , MonadRandom >= 0.1.8
    , random >= 1.0.1.1
    , exact-combinatorics >= 0.2.0.4
    , parallel >= 3.1.0.1
  ghc-options:
    -Wall -fwarn-unused-imports -auto-all -rtsopts
