name:          hopfield
version:       0.1.0.0
license:       MIT
author:        Mihaela Rosca, Lukasz Severyn, Niklas Hambuechen, Razvan Marinescu, Wael Al Jisihi
copyright:     Copyright: (c) 2012 Mihaela Rosca, Lukasz Severyn, Niklas Hambuechen, Razvan Marinescu, Wael Al Jisihi
maintainer:    Niklas Hambüchen <mail@nh2.me>
category:      AI, Machine Learning
stability:     experimental
synopsis:      Hopfield Networks, Boltzmann Machines and Clusters
description:   Attractor Neural Networks for Modelling Associative Memory
               .
               Report: <https://github.com/imperialhopfield/hopfield/raw/master/report/report.pdf>
               .
               A third year group project at Imperial College London,
               supervised by Prof. Abbas Edalat.
               .
               This projects implements:
               .
               * Hopfield Networks
               .
               * Clusters and Super Attractors
               .
               * The Restricted Boltzmann Machine
               .
               * A Boltzmann Machine for classification
               .
               and comes with a range of experiments to evaluate their properties.

homepage:      https://github.com/imperialhopfield/hopfield
bug-Reports:   https://github.com/imperialhopfield/hopfield/issues

build-type:    Simple
cabal-version: >= 1.10

source-repository head
  type: git
  location: git://github.com/imperialhopfield/hopfield.git


library
  default-language: Haskell2010
  exposed-modules:
      Hopfield.Hopfield
    , Hopfield.Analysis
    , Hopfield.Benchmark
    , Hopfield.Boltzmann.ClassificationBoltzmannMachine
    , Hopfield.Boltzmann.RestrictedBoltzmannMachine
    , Hopfield.Clusters
    , Hopfield.Common
    , Hopfield.Experiments.ClusterExperiments
    , Hopfield.Experiments.Experiment
    , Hopfield.Experiments.Experiment2SuperAttractors
    , Hopfield.Experiments.ExperimentUtil
    , Hopfield.Experiments.SmallExperiments
    , Hopfield.Images.ConvertImage
    , Hopfield.Measurement
    , Hopfield.SuperAttractors
    , Hopfield.TestUtil
    , Hopfield.Util
  other-modules:
  hs-source-dirs:
    src
  build-tools: hsc2hs
  build-depends:
      base >= 4 && <= 5
    , parallel >= 3.1.0.1
    , array >= 0.4.0.0
    , erf >= 2.0.0.0
    , exact-combinatorics >= 0.2.0.4
    , hmatrix >= 0.11.0.4
    , MonadRandom >= 0.1.8
    , probability >= 0.2.4
    , random >= 1.0.1.1
    , random-fu >= 0.2.3.1
    , rvar >= 0.2.0.1
    , vector >= 0.9.1
    , QuickCheck >= 2.4.2
    , deepseq >= 1.3.0.0
    , monad-loops >= 0.3.3.0
    , split >= 0.2.1.1
  c-sources:
      src/Hopfield/Images/convertImage.c
  include-dirs:
      src/Hopfield
    , /usr/include/ImageMagick
  includes:
      wand/magick_wand.h
  cc-options:
    -- Can't use "-Wextra -Werror" here due to hsc2hs generating unused main() parameters
    -g -std=c99 -O0 -Wall -Wextra
  ghc-options:
    -Wall -fwarn-unused-imports -auto-all -O
  extra-libraries:
    MagickWand MagickCore


executable experiment
  default-language: Haskell2010
  hs-source-dirs:
    apps
  main-is:
    ExperimentMain.hs
  other-modules:
  build-depends:
      base >= 4 && <= 5
    , hopfield
    , optparse-applicative >= 0.5.0.0
  ghc-options:
    -Wall -fwarn-unused-imports -auto-all -O -caf-all -rtsopts -threaded



executable recognize
  default-language: Haskell2010
  hs-source-dirs:
    apps
  main-is:
    Recognize.hs
  other-modules:
  build-depends:
      base >= 4 && <= 5
    , hopfield
    , random >= 1.0.1.1
    , MonadRandom >= 0.1.8
    , vector >= 0.9.1
    , optparse-applicative >= 0.5.0.0
    , JuicyPixels >= 2.0.0
    , directory >= 1.1.0.2
  ghc-options:

    -Wall -fwarn-unused-imports -auto-all -O -caf-all -rtsopts -threaded


Test-Suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Main.hs
  build-depends:
      base >= 4
    , hopfield
    , erf >= 2.0.0.0
    , hspec >= 1.3.0.1
    , HUnit >= 1.2.4.2
    , QuickCheck >= 2.4.2
    , vector >= 0.9.1
    , MonadRandom >= 0.1.8
    , random >= 1.0.1.1
    , exact-combinatorics >= 0.2.0.4
    , parallel >= 3.1.0.1
  ghc-options:
    -Wall -fwarn-unused-imports -auto-all -O -caf-all -rtsopts
